# Informatica2

./: .gitignore  CMakeLists.txt
Clase02_5-04/EjercicioFecha/: Date.cpp  Date.h  ejercicioDate.cpp
Clase02_5-04/EjercicioPunto/: Punto2D.cpp  Punto2D.h  ejercicioPunto.cpp
Clase03_12-04/EjercicioHerencia/: EjercicioHerencia.cpp  Person.h  Persona.cpp  Student.cpp  Student.h
Clase04_19-04/EjercicioAuto/: Car.cpp  Car.h  Chasis.cpp  Chasis.h  EjercicioClase.cpp  Engine.cpp  Engine.h  Tire.cpp  Tire.h
Clase06_03-05/: motivoVacío.txt
Clase07_10-05/: CMakeLists.txt  MainWindow.cpp  main.cpp
Clase07_10_05/: MainWindow.h  MainWindow.ui
Clase08_17-05/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  SecDialog.cpp  SecDialog.ui
Clase08_17_05/: CMakeLists.txt  SecDialog.h
Clase09_31-05/parcial/: alimentos.cpp  alimentos.h  articulos.cpp  articulos.h  comentariosParcial.txt  ferreteria.cpp  ferreteria.h  main.cpp
DaniTest/: main.cpp
DaniTest/inc/: classDeparture.hpp  classHour.hpp  classPlane.hpp  classString.hpp  utils.hpp
DaniTest/src/: Makefile  classDeparture.cpp  classHour.cpp  classPlane.cpp  classString.cpp  execute.sh  utils.cpp
LPC845-BRK/.mcuxpressoide_packages_support/: info.properties
LPC845-BRK/.metadata/: version.ini
LPC845-BRK/.metadata/.plugins/org.eclipse.cdt.core/: GPIO.1686773139990.pdom  GPIO.language.settings.xml
LPC845-BRK/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
LPC845-BRK/.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
LPC845-BRK/.metadata/.plugins/org.eclipse.core.resources/.projects/GPIO/: .markers  .markers.snap
LPC845-BRK/.metadata/.plugins/org.eclipse.core.resources/.projects/GPIO/.indexes/: properties.index
LPC845-BRK/.metadata/.plugins/org.eclipse.core.resources/.projects/GPIO/.indexes/e4/: history.index  properties.index
LPC845-BRK/.metadata/.plugins/org.eclipse.core.resources/.projects/GPIO/.indexes/e4/45/: history.index  properties.index
LPC845-BRK/.metadata/.plugins/org.eclipse.core.resources/.root/: 11.tree
LPC845-BRK/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
LPC845-BRK/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
LPC845-BRK/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
LPC845-BRK/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
LPC845-BRK/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
LPC845-BRK/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
LPC845-BRK/GPIO/: .cproject  GPIO LinkServer Debug.launch
LPC845-BRK/GPIO/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
LPC845-BRK/GPIO/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
LPC845-BRK/GPIO/Debug/: GPIO.axf  GPIO.map  GPIO_Debug.ld  GPIO_Debug_library.ld  GPIO_Debug_memory.ld  makefile  sources.mk
LPC845-BRK/GPIO/Debug/src/: GPIOmain.d  GPIOmain.su  Gpio.d  Gpio.su  Input.d  Input.su  Output.d  Output.su  subdir.mk
LPC845-BRK/GPIO/Debug/src/02-Gpio/: Gpio.d  Gpio.su  subdir.mk
LPC845-BRK/GPIO/Debug/src/application/: GPIOmain.d  GPIOmain.su  subdir.mk
LPC845-BRK/GPIO/Debug/src/firmware/: subdir.mk
LPC845-BRK/GPIO/src/: Gpio.h  Input.cpp  Input.h  LPC845.h  Output.h  types.h
LPC845-BRK/GPIO/src/01-PIN/: Input.h  Output.h
LPC845-BRK/GPIO/src/02-Gpio/: Gpio.cpp  Gpio.h
LPC845-BRK/GPIO/src/03-Callback/: Callback.cpp  Callback.h
LPC845-BRK/GPIO/src/06-Timer/: Timer.cpp  Timer.h
LPC845-BRK/GPIO/src/application/: GPIOmain.cpp  infotronicInit.cpp  infotronicInit.h
LPC845-BRK/GPIO/src/firmware/: sysTick.cpp  sysTick.h
PracticaPrimerParcial/VirtualMethods/: Child.cpp  Child.h  Parent.cpp  Parent.h  virtualMain.cpp
PracticaPrimerParcial/parcialA/: Avion.cpp  Avion.h  Hora.cpp  Hora.h  Partida.cpp  Partida.h  String.cpp  String.h
PracticaPrimerParcial/parcialB/: Cliente.cpp  Cliente.h  Costo.cpp  Costo.h  Envio.cpp  Envio.h  parcialB.cpp
build-Clase08_17_05-Desktop_Qt_6_4_3_GCC_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
(+10 files in other folders)
